frontend/test/should_fail/bitbucket30_001.grg
sequence EmitSetAEdgeFailDirected {
     {s:set<Edge>=edges(AEdge); emit("1 value of attribute 5 6 " + s + "\n")}
}
